--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Task App</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         
     </style>
@@ -12,12 +13,15 @@
     <div id="tasks">
         <div id="task-row-1" class="row">
             <div id="task-description-1">pack spikes for track meet</div>
+            <div id="task-status-1" class="todo task-status">todo</div>
         </div>
         <div id="task-row-2" class="row">
             <div id="task-description-2">write draft english paper</div>
+            <div id="task-status-2" class="doing task-status">doing</div>
         </div>
         <div id="task-row-3" class="row">
             <div id="task-description-3">finish math homework</div>
+            <div id="task-status-3" class="done task-status">done</div>
         </div>
     </div>
 </body>
